# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: __init__.py  build_ast.py  constants.py  diff.py  engine.py  gendiff.py  main_script.py  parsers.py
gendiff/formatters/: __init__.py  get_formatter.py  json.py  plain.py  pretty.py  undefined.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: before.json  before.yml  complex_after.json  expected_for_complex_json.txt  expected_for_plain_json.txt  expected_format_json.json  expected_format_plain.txt  expected_results.py
