[tool.poetry]
name = "slavarobotam_gendiff"
version = "0.2.0"
description = "Compare to config files"
authors = ["mari <zefiratakuet@yandex.ru>"]
packages = [
    { include = "gendiff" },
  ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
gendiff = "gendiff.gendiff:main"

[[tool.poetry.source]]
name = "ott45"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

